--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
         <button type="filter" onclick="filterEvents()">Apply Filter</button>
     </div>
 
-    <div class="event-list">
+    <!-- <div class="event-list">
         {% for event in events %}
             <div class="event">
                 <img src="static/kids.jpg" alt="Kid's Event">
@@ -45,9 +45,61 @@
                 <p>Venue: {{ event.venue }}</p>
             </div>
         {% endfor %}
+    </div> -->
+    
+
+    <div class="event-list">
+        <form id="event-form">
+            <!-- Add a button to add selected events to the calendar -->
+            <button type="button" class="addcalendar" onclick="addSelectedEvents()">Add Selected Events to Calendar</button>
+            {% for event in events %}
+                <div class="event">
+                    <img src="static/kids.jpg" alt="Kid's Event">
+                    <h2>{{ event.name }}</h2>
+                    <p>Date: {{ event.date }}</p>
+                    <p>Venue: {{ event.venue }}</p>
+                    <!-- Add a checkbox for each event -->
+                    <input type="checkbox" name="selected_events" value="{{ event.id }}">
+                </div>
+            {% endfor %}
+        </form>
     </div>
 
     <script>
+        function addSelectedEvents() {
+            var selectedEventIds = [];
+            var checkboxes = document.querySelectorAll('input[name="selected_events"]:checked');
+
+            checkboxes.forEach(function(checkbox) {
+                selectedEventIds.push(checkbox.value);
+            });
+
+            if (selectedEventIds.length === 0) {
+                alert("Please select at least one event.");                
+                return;
+            }
+            alert(selectedEventIds);
+
+            // Send selected event IDs to the Python backend using AJAX
+            var xhr = new XMLHttpRequest();
+            alert(xhr);
+            xhr.open("POST", "/add_to_calendar", true);
+            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+
+            xhr.onreadystatechange = function() {               
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    
+                    if (xhr.status === 200) {
+                        alert("Selected events added to your Google Calendar.");
+                    } else {
+                        alert("Error adding events to the calendar.");
+                    }
+                }
+            };
+
+            xhr.send(JSON.stringify({ event_ids: selectedEventIds }));
+        }
+    
         function filterEvents() {
             var selectedVenue = document.getElementById("venue").value;
             var events = document.querySelectorAll(".event");
@@ -61,7 +113,6 @@
                 }
             });
         }
-    </script>
-</body>
-
-</html>
+    </script>    
+    </body>
+    </html>
