--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,15 @@
         <h1>EventBee</h1>
     </div>
 
+    <!-- Add a link to the dashboard -->
+    <div class="dashboard-link">
+        <a href="/dashboard">My Calendar</a>
+    </div>
+     
+    <div class="logout">
+        <a href="/logout">Logout</a>
+    </div>
+
     <div class="search">
         <form method="POST">
             <input type="text" name="search" placeholder="Search for events">
